making changes to the structure

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.248.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
@@ -20,5 +21,8 @@
     "passport-local": "^1.0.0",
     "pg-promise": "^8.2.2",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "dotenv": "^5.0.1"
   }
 }
